--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Polyphony J. Bruna"
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   bio              : "PhD Student, Cognitive and Information Sciences"
   location         : "University of California, Merced"
   employer         :
