--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Polyphony J. Bruna"
   avatar           : "profile.jpg"
-  bio              : "PhD Student, Cognitive and Information Sciences"
+  bio              : "PhD Student, Cognitive & Information Sciences"
   location         : "University of California, Merced"
   employer         :
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
