--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 # main links links
 main:
-  - title: "Papers & Publications"
+  - title: "Publications"
     url: /publications/
     
   - title: "Book Reviews & Non-Academic Articles"
