--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,10 +1,19 @@
 # main links links
 main:
+  - title: "Background"
+    url: /background/
+
   - title: "Publications"
     url: /publications/
     
   - title: "Book Reviews & Non-Academic Articles"
     url: /non-academic/
+
+  - title: "Talks"
+    url: /talks/    
+
+  - title: "Teaching"
+    url: /teaching/
     
   - title: "CV"
     url: /cv/
