update: background, reading, navigation

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,12 +9,12 @@ main:
   - title: "Book Reviews & Non-Academic Articles"
     url: /non-academic/
 
-  - title: "Talks"
-    url: /talks/    
-
-  - title: "Teaching"
-    url: /teaching/
-    
+#  - title: "Talks"
+#    url: /talks/    
+#
+#  - title: "Teaching"
+#    url: /teaching/
+#    
   - title: "CV"
     url: /cv/
 
