--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,8 +9,8 @@ main:
   - title: "Book Reviews & Non-Academic Articles"
     url: /non-academic/
 
-#  - title: "Talks"
-#    url: /talks/    
+  - title: "Talks"
+    url: /talks/    
 #
 #  - title: "Teaching"
 #    url: /teaching/
