--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,8 +3,8 @@ main:
   - title: "About"
     url: /about/
 
-  - title: "Publications"
-    url: /publications/
+  - title: "Projects"
+    url: /projects/
     
   - title: "Book Reviews & Non-Academic Articles"
     url: /non-academic/
