--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,7 @@ main:
   - title: "About"
     url: /about/
 
-  - title: "Publications"
+  - title: "Projects"
     url: /publications/
     
   - title: "Book Reviews & Non-Academic Articles"
